# Batterytwin-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md
examples/: sample_questions.md
scripts/: chat.py
src/battery_twin/agent/: __init__.py  agent.py  config.py
src/battery_twin/servers/: __init__.py  twin_server.py
src/battery_twin/twin/: __init__.py  simulator.py
src/battery_twin/ui/: app.py
tests/: test_simulator.py
